Refactor data source management and chat components; enhance API integration and UI responsiveness. Introduce new features for managing data sources, including improved error handling, updated DTOs, and a unified chat interface. Update styles and streamline code for better maintainability.