@@ -13,17 +13,21 @@ import com.slm.slmbackend.service.EmbedService;
 import com.slm.slmbackend.service.IdGenerationService;
 import com.slm.slmbackend.util.MapperUtil;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import reactor.core.publisher.Mono;
 
 import java.lang.reflect.Field;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static com.slm.slmbackend.enums.ResponseEnum.DATA_SOURCE_CONFIGURATION_NOT_FOUND;
 
 @Service
 @RequiredArgsConstructor
 @Transactional
+@Slf4j
 public class DataSourceConfigurationServiceImpl implements DataSourceConfigurationService {
 
     private final DataSourceConfigurationRepository dataSourceConfigurationRepository;
@@ -31,21 +35,37 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
     private final IdGenerationService idGenerationService;
     private final UserAccountRepository userAccountRepository;
     private final EmbedService embedService;
+
     @Override
     @Transactional
     public void createDataSourceConfiguration(UserAccount user, CreateDataSourceConfigurationDTO createDTO) {
+        log.debug("Creating new data source configuration: {}", createDTO.getName());
+        
+        // Map the DTO to entity
         DataSourceConfiguration configuration = MapperUtil.mapObject(createDTO, DataSourceConfiguration.class);
+        
+        // Map table definitions
+        List<TableDefinition> tableDefinitions = MapperUtil.mapList(
+                createDTO.getTableDefinitions() != null ? createDTO.getTableDefinitions() : new ArrayList<>(), 
+                TableDefinition.class);
 
-        List<TableDefinition> tableDefinitions = MapperUtil.mapList(createDTO.getTableDefinitions(), TableDefinition.class);
+        // Set owner
+        List<UserAccount> owners = new ArrayList<>();
+        owners.add(user);
 
-        List<UserAccount> owners = List.of(user);
-
-        configuration.setCollectionName(createDTO.getName() + "_" + idGenerationService.getNextId("DataSourceConfiguration"))
+        // Generate a unique collection name
+        String collectionName = createDTO.getName() + "_" + idGenerationService.getNextId("DataSourceConfiguration");
+        
+        // Set all properties
+        configuration.setCollectionName(collectionName)
                 .setTableDefinitions(tableDefinitions)
                 .setOwners(owners);
 
+        // Save to get IDs assigned
         configuration = dataSourceConfigurationRepository.save(configuration);
+        log.debug("Saved data source configuration with ID: {}", configuration.getId());
 
+        // Build a map of columns for easy lookup
         Map<String, TableColumn> columnMap = new HashMap<>();
         for (TableDefinition tableDef : configuration.getTableDefinitions()) {
             if (tableDef.getColumns() != null) {
@@ -55,54 +75,82 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
             }
         }
 
+        // Create relations
         List<ColumnRelation> columnRelations = new ArrayList<>();
-
-        for (CreateDataSourceConfigurationDTO.TableDefinition tableDef : createDTO.getTableDefinitions()) {
-            if (tableDef.getColumns() != null) {
-                for (CreateDataSourceConfigurationDTO.TableColumn column : tableDef.getColumns()) {
-                    for (CreateDataSourceConfigurationDTO.ColumnRelation relation : column.getRelations()) {
-                        TableColumn columnEntity = columnMap.get(tableDef.getTableIdentifier() + "." + column.getColumnIdentifier());
-                        TableColumn relatedColumn = columnMap.get(relation.getTableIdentifier() + "." + relation.getToColumn());
-                        if (relatedColumn == null) {
-                            throw new AppException(ResponseEnum.COLUMN_IN_RELATION_NOT_FOUND);
+        if (createDTO.getTableDefinitions() != null) {
+            for (CreateDataSourceConfigurationDTO.TableDefinition tableDef : createDTO.getTableDefinitions()) {
+                if (tableDef.getColumns() != null) {
+                    for (CreateDataSourceConfigurationDTO.TableColumn column : tableDef.getColumns()) {
+                        if (column.getRelations() != null && !column.getRelations().isEmpty()) {
+                            for (CreateDataSourceConfigurationDTO.ColumnRelation relation : column.getRelations()) {
+                                TableColumn fromColumn = columnMap.get(tableDef.getTableIdentifier() + "." + column.getColumnIdentifier());
+                                TableColumn toColumn = columnMap.get(relation.getTableIdentifier() + "." + relation.getToColumn());
+                                
+                                if (toColumn == null) {
+                                    throw new AppException(ResponseEnum.COLUMN_IN_RELATION_NOT_FOUND, 
+                                        String.format("Column %s in table %s not found", relation.getToColumn(), relation.getTableIdentifier()));
+                                }
+                                
+                                ColumnRelation columnRelation = new ColumnRelation()
+                                        .setDataSource(configuration)
+                                        .setFromColumn(fromColumn)
+                                        .setToColumn(toColumn)
+                                        .setType(relation.getType());
+                                
+                                columnRelations.add(columnRelation);
+                            }
                         }
-                        ColumnRelation columnRelation = new ColumnRelation()
-                                .setDataSource(configuration)
-                                .setToColumn(relatedColumn)
-                                .setFromColumn(columnEntity)
-                                .setType(relation.getType());
-                        columnRelations.add(columnRelation);
                     }
                 }
             }
         }
-        columnRelationRepository.saveAll(columnRelations);
+        
+        if (!columnRelations.isEmpty()) {
+            log.debug("Saving {} column relations", columnRelations.size());
+            columnRelationRepository.saveAll(columnRelations);
+        }
     }
 
     @Override
     public List<DataSourceConfigurationDTO> getAllDataSourceOwnedByUser(UserAccount user) {
-        return MapperUtil.mapList(dataSourceConfigurationRepository.findAllByOwnersContains(user), DataSourceConfigurationDTO.class);
+        log.debug("Getting all data sources owned by user: {}", user.getUsername());
+        
+        List<DataSourceConfiguration> configurations = dataSourceConfigurationRepository.findAllByOwnersContains(user);
+        return MapperUtil.mapList(configurations, DataSourceConfigurationDTO.class);
     }
 
     @Override
     public List<DataSourceConfigurationViewDTO> getAllDataSourceAvailableForUser(UserAccount user) {
-        return MapperUtil.mapList(dataSourceConfigurationRepository.findAllDataSourceAvailableForUser(user), DataSourceConfigurationViewDTO.class);
+        log.debug("Getting all data sources available for user: {}", user.getUsername());
+        
+        List<DataSourceConfiguration> configurations = dataSourceConfigurationRepository.findAllDataSourceAvailableForUser(user);
+        return MapperUtil.mapList(configurations, DataSourceConfigurationViewDTO.class);
     }
 
     private DataSourceConfiguration validateAndGetDataSource(UserAccount user, Integer id) {
-        DataSourceConfiguration configuration = dataSourceConfigurationRepository.findById(id).orElseThrow(
-                () -> new AppException(DATA_SOURCE_CONFIGURATION_NOT_FOUND));
-        if (configuration.getOwners().stream().map(UserAccount::getUsername).noneMatch(user.getUsername()::equals)) {
-            throw new AppException(ResponseEnum.DATA_SOURCE_NOT_BELONG_TO_USER);
+        DataSourceConfiguration configuration = dataSourceConfigurationRepository.findById(id)
+                .orElseThrow(() -> new AppException(DATA_SOURCE_CONFIGURATION_NOT_FOUND, 
+                    String.format("Data source with ID %d not found", id)));
+        
+        // Check if user is an owner
+        boolean isOwner = configuration.getOwners().stream()
+                .anyMatch(owner -> owner.getId().equals(user.getId()));
+        
+        if (!isOwner) {
+            throw new AppException(ResponseEnum.DATA_SOURCE_NOT_BELONG_TO_USER,
+                String.format("User %s is not an owner of data source %d", user.getUsername(), id));
         }
+        
         return configuration;
     }
 
     @Override
     public DataSourceConfigurationDetailDTO getDataSourceConfigurationById(UserAccount user, Integer id) {
+        log.debug("Getting data source configuration with ID: {}", id);
+        
         DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
 
-        // Map the basic properties using ModelMapper
+        // Create the detail DTO
         DataSourceConfigurationDetailDTO detailDTO = new DataSourceConfigurationDetailDTO();
         detailDTO.setId(configuration.getId());
         detailDTO.setDatabaseType(configuration.getDatabaseType());
@@ -114,7 +162,7 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
         detailDTO.setPassword(configuration.getPassword());
         detailDTO.setCollectionName(configuration.getCollectionName());
 
-        // Manually map the tableDefinitions to avoid circular references
+        // Map the table definitions
         List<TableDTO> tableDTOs = new ArrayList<>();
         if (configuration.getTableDefinitions() != null) {
             for (TableDefinition tableDef : configuration.getTableDefinitions()) {
@@ -140,7 +188,7 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
                                 RelationDTO relationDTO = new RelationDTO();
 
                                 if (relation.getToColumn() != null) {
-                                    // Create ColumnDTO (not ColumnWithRelationDTO) for toColumn
+                                    // Create ColumnDTO for the target column
                                     ColumnDTO toColumnDTO = new ColumnDTO();
                                     toColumnDTO.setId(relation.getToColumn().getId());
                                     toColumnDTO.setColumnIdentifier(relation.getToColumn().getColumnIdentifier());
@@ -151,6 +199,8 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
                                     relationDTO.setToColumn(toColumnDTO);
                                 }
 
+                                relationDTO.setId(relation.getId());
+                                relationDTO.setType(relation.getType());
                                 relationDTOs.add(relationDTO);
                             }
                         }
@@ -166,23 +216,23 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
         }
 
         detailDTO.setTableDefinitions(tableDTOs);
-
         return detailDTO;
     }
 
     @Override
     public List<UserAccountDTO> getAllOwnersOfDataSourceConfiguration(UserAccount user, Integer id) {
+        log.debug("Getting all owners of data source configuration with ID: {}", id);
+        
         DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
-
-        // Get all owners and map them to DTOs
         return MapperUtil.mapList(configuration.getOwners(), UserAccountDTO.class);
     }
 
     @Override
     public List<GroupDTO> getAllGroupsOfDataSourceConfiguration(UserAccount user, Integer id) {
+        log.debug("Getting all groups of data source configuration with ID: {}", id);
+        
         DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
-
-        // Map all groups to GroupDTOs
+        
         if (configuration.getGroups() == null || configuration.getGroups().isEmpty()) {
             return new ArrayList<>();
         }
@@ -192,15 +242,21 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
 
     @Override
     public GroupDetailDTO getGroupById(UserAccount user, Integer groupId) {
-        // This is slightly different as we're searching by group ID, not data source ID
-
-        // First, find all data sources available to the user
-        List<DataSourceConfiguration> availableDataSources =
-                dataSourceConfigurationRepository.findAllByOwnersContains(user);
+        log.debug("Getting group with ID: {}", groupId);
+        
+        // Find all data sources available to the user
+        List<DataSourceConfiguration> availableDataSources = new ArrayList<>(
+                dataSourceConfigurationRepository.findAllByOwnersContains(user));
+        
         availableDataSources.addAll(
                 dataSourceConfigurationRepository.findAllDataSourceAvailableForUser(user));
+        
+        // Remove duplicates
+        availableDataSources = availableDataSources.stream()
+                .distinct()
+                .collect(Collectors.toList());
 
-        // Look for the group in all available data sources
+        // Find the group in any of the available data sources
         for (DataSourceConfiguration dataSource : availableDataSources) {
             if (dataSource.getGroups() != null) {
                 Optional<UserGroup> foundGroup = dataSource.getGroups().stream()
@@ -210,25 +266,30 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
                 if (foundGroup.isPresent()) {
                     UserGroup group = foundGroup.get();
 
-                    // Create and populate the GroupDetailDTO
+                    // Map to DTO
                     GroupDetailDTO dto = new GroupDetailDTO();
                     dto.setId(group.getId());
                     dto.setName(group.getName());
 
-                    // Map the table IDs
+                    // Map table IDs
                     if (group.getTableMappings() != null) {
                         List<Integer> tableIds = group.getTableMappings().stream()
+                                .filter(mapping -> mapping.getSchema() != null)
                                 .map(mapping -> mapping.getSchema().getId())
-                                .toList();
+                                .collect(Collectors.toList());
                         dto.setTableIds(tableIds);
+                    } else {
+                        dto.setTableIds(new ArrayList<>());
                     }
 
-                    // Map the members
+                    // Map members
                     if (group.getMembers() != null) {
                         dto.setMembers(MapperUtil.mapList(group.getMembers(), UserAccountDTO.class));
+                    } else {
+                        dto.setMembers(new ArrayList<>());
                     }
 
-                    // Map the data source configuration
+                    // Map data source
                     dto.setDataSourceConfiguration(MapperUtil.mapObject(dataSource, DataSourceConfigurationDTO.class));
 
                     return dto;
@@ -236,14 +297,17 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
             }
         }
 
-        // If we get here, we didn't find the group
-        throw new AppException(ResponseEnum.NOT_FOUND.getCode(), "Group not found");
+        throw new AppException(ResponseEnum.NOT_FOUND.getCode(), 
+            String.format("Group with ID %d not found or not accessible", groupId));
     }
 
     @Override
     public void updateDataSourceConfiguration(UserAccount user, Integer id, UpdateDataSourceConfigurationDTO updateDTO) {
+        log.debug("Updating data source configuration with ID: {}", id);
+        
         DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
 
+        // Update only non-null fields
         for (Field field : updateDTO.getClass().getDeclaredFields()) {
             field.setAccessible(true);
             try {
@@ -254,82 +318,121 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
                     configField.set(configuration, value);
                 }
             } catch (NoSuchFieldException | IllegalAccessException e) {
-                throw new RuntimeException("Failed to update field: " + field.getName(), e);
+                log.error("Failed to update field: {}", field.getName(), e);
+                throw new AppException(ResponseEnum.INTERNAL_SERVER_ERROR, 
+                    String.format("Failed to update field: %s", field.getName()));
             }
         }
+        
         dataSourceConfigurationRepository.save(configuration);
     }
 
     @Override
     public void deleteDataSourceConfiguration(UserAccount user, Integer id) {
+        log.debug("Deleting data source configuration with ID: {}", id);
+        
         DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
-        configuration.getOwners().clear();
-        dataSourceConfigurationRepository.save(configuration);
+        
+        // Clear owners to avoid foreign key constraints
+        if (configuration.getOwners() != null) {
+            configuration.getOwners().clear();
+            dataSourceConfigurationRepository.save(configuration);
+        }
 
         dataSourceConfigurationRepository.delete(configuration);
     }
 
     @Override
     public void addTableToDataSource(UserAccount user, Integer id, CreateTableDTO tableDTO) {
+        log.debug("Adding table to data source with ID: {}", id);
+        
         DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
+        
         TableDefinition tableDefinition = MapperUtil.mapObject(tableDTO, TableDefinition.class);
+        tableDefinition.setColumns(new ArrayList<>());
+        
+        if (configuration.getTableDefinitions() == null) {
+            configuration.setTableDefinitions(new ArrayList<>());
+        }
+        
         configuration.getTableDefinitions().add(tableDefinition);
         dataSourceConfigurationRepository.save(configuration);
     }
 
-
-
     @Override
     public void updateTable(UserAccount user, Integer id, Integer tableId, UpdateTableDTO tableDTO) {
+        log.debug("Updating table with ID: {} in data source with ID: {}", tableId, id);
+        
         DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
-        TableDefinition tableDefinition = configuration.getTableDefinitions().stream()
+        
+        TableDefinition tableDefinition = findTableById(configuration, tableId);
+        
+        tableDefinition.setTableIdentifier(tableDTO.getTableIdentifier());
+        
+        dataSourceConfigurationRepository.save(configuration);
+    }
+
+    private TableDefinition findTableById(DataSourceConfiguration configuration, Integer tableId) {
+        if (configuration.getTableDefinitions() == null) {
+            throw new AppException(ResponseEnum.TABLE_NOT_FOUND, 
+                String.format("Table with ID %d not found", tableId));
+        }
+        
+        return configuration.getTableDefinitions().stream()
                 .filter(table -> table.getId().equals(tableId))
                 .findFirst()
-                .orElseThrow(() -> new AppException(ResponseEnum.TABLE_NOT_FOUND));
-
-        tableDefinition.setTableIdentifier(tableDTO.getTableIdentifier());
-        tableDefinition.setId(tableDTO.getId());
-
-        dataSourceConfigurationRepository.save(configuration);
+                .orElseThrow(() -> new AppException(ResponseEnum.TABLE_NOT_FOUND, 
+                    String.format("Table with ID %d not found", tableId)));
     }
 
     @Override
     public void removeTableFromDataSource(UserAccount user, Integer id, Integer tableId) {
+        log.debug("Removing table with ID: {} from data source with ID: {}", tableId, id);
+        
         DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
-        TableDefinition tableDefinition = configuration.getTableDefinitions().stream()
-                .filter(table -> table.getId().equals(tableId))
-                .findFirst()
-                .orElseThrow(() -> new AppException(ResponseEnum.TABLE_NOT_FOUND));
-
+        TableDefinition tableDefinition = findTableById(configuration, tableId);
+        
         configuration.getTableDefinitions().remove(tableDefinition);
         dataSourceConfigurationRepository.save(configuration);
     }
 
     @Override
     public void addColumnToTable(UserAccount user, Integer id, Integer tableId, CreateColumnDTO columnDTO) {
+        log.debug("Adding column to table with ID: {} in data source with ID: {}", tableId, id);
+        
         DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
-        TableDefinition tableDefinition = configuration.getTableDefinitions().stream()
-                .filter(table -> table.getId().equals(tableId))
-                .findFirst()
-                .orElseThrow(() -> new AppException(ResponseEnum.TABLE_NOT_FOUND));
-
+        TableDefinition tableDefinition = findTableById(configuration, tableId);
+        
         TableColumn column = MapperUtil.mapObject(columnDTO, TableColumn.class);
+        column.setOutgoingRelations(new ArrayList<>());
+        
+        if (tableDefinition.getColumns() == null) {
+            tableDefinition.setColumns(new ArrayList<>());
+        }
+        
         tableDefinition.getColumns().add(column);
         dataSourceConfigurationRepository.save(configuration);
     }
 
     @Override
     public void updateColumn(UserAccount user, Integer id, Integer tableId, Integer columnId, UpdateColumnDTO columnDTO) {
+        log.debug("Updating column with ID: {} in table with ID: {} in data source with ID: {}", columnId, tableId, id);
+        
         ColumnResult result = getColumnResult(user, id, tableId, columnId);
 
+        // Update column properties
         result.column().setColumnIdentifier(columnDTO.getColumnIdentifier());
-        result.column().setId(columnDTO.getId());
+        result.column().setColumnType(columnDTO.getColumnType());
+        result.column().setColumnDescription(columnDTO.getColumnDescription());
+        result.column().setIsPrimaryKey(columnDTO.getIsPrimaryKey());
 
         dataSourceConfigurationRepository.save(result.configuration());
     }
 
     @Override
     public void removeColumnFromTable(UserAccount user, Integer id, Integer tableId, Integer columnId) {
+        log.debug("Removing column with ID: {} from table with ID: {} in data source with ID: {}", columnId, tableId, id);
+        
         ColumnResult result = getColumnResult(user, id, tableId, columnId);
 
         result.tableDefinition().getColumns().remove(result.column());
@@ -338,15 +441,19 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
 
     private ColumnResult getColumnResult(UserAccount user, Integer id, Integer tableId, Integer columnId) {
         DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
-        TableDefinition tableDefinition = configuration.getTableDefinitions().stream()
-                .filter(table -> table.getId().equals(tableId))
-                .findFirst()
-                .orElseThrow(() -> new AppException(ResponseEnum.TABLE_NOT_FOUND));
+        TableDefinition tableDefinition = findTableById(configuration, tableId);
 
+        if (tableDefinition.getColumns() == null) {
+            throw new AppException(ResponseEnum.COLUMN_NOT_FOUND, 
+                String.format("Column with ID %d not found in table with ID %d", columnId, tableId));
+        }
+        
         TableColumn column = tableDefinition.getColumns().stream()
                 .filter(col -> col.getId().equals(columnId))
                 .findFirst()
-                .orElseThrow(() -> new AppException(ResponseEnum.COLUMN_NOT_FOUND));
+                .orElseThrow(() -> new AppException(ResponseEnum.COLUMN_NOT_FOUND, 
+                    String.format("Column with ID %d not found in table with ID %d", columnId, tableId)));
+        
         return new ColumnResult(configuration, tableDefinition, column);
     }
 
@@ -355,67 +462,108 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
 
     @Override
     public void addRelationToColumn(UserAccount user, Integer id, Integer tableId, Integer columnId, CreateRelationDTO relationDTO) {
-        ColumnResult result = getColumnResult(user, id, tableId, columnId);
-
-        TableDefinition targetTableDefinition = result.configuration().getTableDefinitions().stream()
+        log.debug("Adding relation to column with ID: {} in table with ID: {} in data source with ID: {}", columnId, tableId, id);
+        
+        ColumnResult sourceColumnResult = getColumnResult(user, id, tableId, columnId);
+        DataSourceConfiguration configuration = sourceColumnResult.configuration();
+        
+        // Find target table and column
+        TableDefinition targetTableDefinition = configuration.getTableDefinitions().stream()
                 .filter(table -> table.getTableIdentifier().equals(relationDTO.getTableIdentifier()))
                 .findFirst()
-                .orElseThrow(() -> new AppException(ResponseEnum.TABLE_NOT_FOUND));
+                .orElseThrow(() -> new AppException(ResponseEnum.TABLE_NOT_FOUND, 
+                    String.format("Target table %s not found", relationDTO.getTableIdentifier())));
 
+        if (targetTableDefinition.getColumns() == null) {
+            throw new AppException(ResponseEnum.COLUMN_NOT_FOUND, 
+                String.format("Target column %s not found in table %s", 
+                    relationDTO.getToColumn(), relationDTO.getTableIdentifier()));
+        }
+        
         TableColumn targetColumn = targetTableDefinition.getColumns().stream()
                 .filter(col -> col.getColumnIdentifier().equals(relationDTO.getToColumn()))
                 .findFirst()
-                .orElseThrow(() -> new AppException(ResponseEnum.COLUMN_NOT_FOUND));
+                .orElseThrow(() -> new AppException(ResponseEnum.COLUMN_NOT_FOUND, 
+                    String.format("Target column %s not found in table %s", 
+                        relationDTO.getToColumn(), relationDTO.getTableIdentifier())));
 
+        // Create and save the relation
         ColumnRelation columnRelation = new ColumnRelation()
-                .setDataSource(result.configuration())
-                .setFromColumn(result.column())
+                .setDataSource(configuration)
+                .setFromColumn(sourceColumnResult.column())
                 .setToColumn(targetColumn)
                 .setType(relationDTO.getType());
 
-        columnRelationRepository.save(columnRelation);
+        if (sourceColumnResult.column().getOutgoingRelations() == null) {
+            sourceColumnResult.column().setOutgoingRelations(new ArrayList<>());
+        }
+        
+        // Save the relation
+        columnRelation = columnRelationRepository.save(columnRelation);
+        
+        // Add to outgoing relations
+        sourceColumnResult.column().getOutgoingRelations().add(columnRelation);
+        
+        dataSourceConfigurationRepository.save(configuration);
     }
 
     @Override
     public void updateRelation(UserAccount user, Integer id, Integer tableId, Integer columnId, Integer relationId, UpdateRelationDTO relationDTO) {
+        log.debug("Updating relation with ID: {} for column with ID: {} in table with ID: {} in data source with ID: {}", 
+            relationId, columnId, tableId, id);
+        
         ColumnResult result = getColumnResult(user, id, tableId, columnId);
 
         ColumnRelation columnRelation = columnRelationRepository.findById(relationId)
-                .orElseThrow(() -> new AppException(ResponseEnum.RELATION_NOT_FOUND));
+                .orElseThrow(() -> new AppException(ResponseEnum.RELATION_NOT_FOUND, 
+                    String.format("Relation with ID %d not found", relationId)));
 
-        if (!columnRelation.getFromColumn().equals(result.column())) {
-            throw new AppException(ResponseEnum.RELATION_NOT_BELONG_TO_COLUMN);
+        if (!columnRelation.getFromColumn().getId().equals(result.column().getId())) {
+            throw new AppException(ResponseEnum.RELATION_NOT_BELONG_TO_COLUMN, 
+                String.format("Relation with ID %d does not belong to column with ID %d", relationId, columnId));
         }
 
         columnRelation.setType(relationDTO.getType());
-
         columnRelationRepository.save(columnRelation);
     }
 
     @Override
     public void removeRelationFromColumn(UserAccount user, Integer id, Integer tableId, Integer columnId, Integer relationId) {
+        log.debug("Removing relation with ID: {} from column with ID: {} in table with ID: {} in data source with ID: {}", 
+            relationId, columnId, tableId, id);
+        
         ColumnResult result = getColumnResult(user, id, tableId, columnId);
 
         ColumnRelation columnRelation = columnRelationRepository.findById(relationId)
-                .orElseThrow(() -> new AppException(ResponseEnum.RELATION_NOT_FOUND));
+                .orElseThrow(() -> new AppException(ResponseEnum.RELATION_NOT_FOUND, 
+                    String.format("Relation with ID %d not found", relationId)));
 
-        if (!columnRelation.getFromColumn().equals(result.column())) {
-            throw new AppException(ResponseEnum.RELATION_NOT_BELONG_TO_COLUMN);
+        if (!columnRelation.getFromColumn().getId().equals(result.column().getId())) {
+            log.info("Id of columnRelation.getFromColumn(): {}", columnRelation.getFromColumn().getId());
+            log.info("Id of result.column(): {}", result.column().getId());
+            throw new AppException(ResponseEnum.RELATION_NOT_BELONG_TO_COLUMN, 
+                String.format("Relation with ID %d does not belong to column with ID %d", relationId, columnId));
         }
 
+        if (result.column().getOutgoingRelations() != null) {
+            result.column().getOutgoingRelations().removeIf(relation -> relation.getId().equals(relationId));
+        }
+        
         columnRelationRepository.delete(columnRelation);
     }
 
-
     @Override
-    public void addGroupToDataSource(UserAccount authenticatedUser, Integer id, GroupUpsertDTO groupDTO) {
-        DataSourceConfiguration configuration = validateAndGetDataSource(authenticatedUser, id);
+    public void addGroupToDataSource(UserAccount user, Integer id, GroupUpsertDTO groupDTO) {
+        log.debug("Adding group to data source with ID: {}", id);
+        
+        DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
 
         UserGroup userGroup = new UserGroup();
         userGroup.setName(groupDTO.getName());
         userGroup.setDataSourceConfiguration(configuration);
         userGroup.setMembers(new ArrayList<>());
 
+        // Create table mappings
         List<GroupTableMapping> tableMappings = new ArrayList<>();
         if (groupDTO.getTableIds() != null && !groupDTO.getTableIds().isEmpty()) {
             buildGroupTableMappings(groupDTO, configuration, tableMappings);
@@ -426,8 +574,8 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
         if (configuration.getGroups() == null) {
             configuration.setGroups(new ArrayList<>());
         }
+        
         configuration.getGroups().add(userGroup);
-
         dataSourceConfigurationRepository.save(configuration);
     }
 
@@ -436,7 +584,8 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
             TableDefinition tableDefinition = configuration.getTableDefinitions().stream()
                     .filter(table -> table.getId().equals(tableId))
                     .findFirst()
-                    .orElseThrow(() -> new AppException(ResponseEnum.TABLE_NOT_FOUND));
+                    .orElseThrow(() -> new AppException(ResponseEnum.TABLE_NOT_FOUND, 
+                        String.format("Table with ID %d not found", tableId)));
 
             GroupTableMapping mapping = new GroupTableMapping();
             mapping.setSchema(tableDefinition);
@@ -445,37 +594,49 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
     }
 
     @Override
-    public void addUserToGroup(UserAccount authenticatedUser, Integer id, Integer groupId, AddUserToGroupDTO userDTO) {
-        DataSourceConfiguration configuration = validateAndGetDataSource(authenticatedUser, id);
+    public void addUserToGroup(UserAccount user, Integer id, Integer groupId, AddUserToGroupDTO userDTO) {
+        log.debug("Adding users to group with ID: {} in data source with ID: {}", groupId, id);
+        
+        DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
 
-        UserGroup userGroup = configuration.getGroups().stream()
-                .filter(group -> group.getId().equals(groupId))
-                .findFirst()
-                .orElseThrow(() -> new AppException(ResponseEnum.NOT_FOUND.getCode(), "Group not found"));
+        UserGroup userGroup = findGroupById(configuration, groupId);
 
+        // Find all users to add
         List<UserAccount> usersToAdd = new ArrayList<>();
         for (Integer userId : userDTO.getUserIds()) {
-            UserAccount user = userAccountRepository.findById(userId)
-                    .orElseThrow(() -> new AppException(ResponseEnum.USER_NOT_FOUND));
-            usersToAdd.add(user);
+            UserAccount userAccount = userAccountRepository.findById(userId)
+                    .orElseThrow(() -> new AppException(ResponseEnum.USER_NOT_FOUND, 
+                        String.format("User with ID %d not found", userId)));
+            usersToAdd.add(userAccount);
         }
 
         if (userGroup.getMembers() == null) {
             userGroup.setMembers(new ArrayList<>());
         }
+        
         userGroup.getMembers().addAll(usersToAdd);
-
         dataSourceConfigurationRepository.save(configuration);
     }
 
-    @Override
-    public void updateGroup(UserAccount authenticatedUser, Integer id, Integer groupId, GroupUpsertDTO groupDTO) {
-        DataSourceConfiguration configuration = validateAndGetDataSource(authenticatedUser, id);
-
-        UserGroup userGroup = configuration.getGroups().stream()
+    private UserGroup findGroupById(DataSourceConfiguration configuration, Integer groupId) {
+        if (configuration.getGroups() == null) {
+            throw new AppException(ResponseEnum.NOT_FOUND.getCode(), 
+                String.format("Group with ID %d not found", groupId));
+        }
+        
+        return configuration.getGroups().stream()
                 .filter(group -> group.getId().equals(groupId))
                 .findFirst()
-                .orElseThrow(() -> new AppException(ResponseEnum.NOT_FOUND.getCode(), "Group not found"));
+                .orElseThrow(() -> new AppException(ResponseEnum.NOT_FOUND.getCode(), 
+                    String.format("Group with ID %d not found", groupId)));
+    }
+
+    @Override
+    public void updateGroup(UserAccount user, Integer id, Integer groupId, GroupUpsertDTO groupDTO) {
+        log.debug("Updating group with ID: {} in data source with ID: {}", groupId, id);
+        
+        DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
+        UserGroup userGroup = findGroupById(configuration, groupId);
 
         userGroup.setName(groupDTO.getName());
 
@@ -485,40 +646,39 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
             buildGroupTableMappings(groupDTO, configuration, tableMappings);
         }
 
-        // Clear existing mappings and add new ones
+        // Replace existing mappings
         if (userGroup.getTableMappings() != null) {
             userGroup.getTableMappings().clear();
+        } else {
+            userGroup.setTableMappings(new ArrayList<>());
         }
-        userGroup.setTableMappings(tableMappings);
-
+        
+        userGroup.getTableMappings().addAll(tableMappings);
         dataSourceConfigurationRepository.save(configuration);
     }
 
     @Override
-    public void removeGroupFromDataSource(UserAccount authenticatedUser, Integer id, Integer groupId) {
-        DataSourceConfiguration configuration = validateAndGetDataSource(authenticatedUser, id);
-
-        UserGroup userGroup = configuration.getGroups().stream()
-                .filter(group -> group.getId().equals(groupId))
-                .findFirst()
-                .orElseThrow(() -> new AppException(ResponseEnum.NOT_FOUND.getCode(), "Group not found"));
+    public void removeGroupFromDataSource(UserAccount user, Integer id, Integer groupId) {
+        log.debug("Removing group with ID: {} from data source with ID: {}", groupId, id);
+        
+        DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
+        UserGroup userGroup = findGroupById(configuration, groupId);
 
         configuration.getGroups().remove(userGroup);
-
         dataSourceConfigurationRepository.save(configuration);
     }
 
     @Override
-    public void removeUserFromGroup(UserAccount authenticatedUser, Integer id, Integer groupId, Integer userId) {
-        DataSourceConfiguration configuration = validateAndGetDataSource(authenticatedUser, id);
+    public void removeUserFromGroup(UserAccount user, Integer id, Integer groupId, Integer userId) {
+        log.debug("Removing user with ID: {} from group with ID: {} in data source with ID: {}", userId, groupId, id);
+        
+        DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
+        UserGroup userGroup = findGroupById(configuration, groupId);
 
-        UserGroup userGroup = configuration.getGroups().stream()
-                .filter(group -> group.getId().equals(groupId))
-                .findFirst()
-                .orElseThrow(() -> new AppException(ResponseEnum.NOT_FOUND.getCode(), "Group not found"));
-
-        UserAccount userToRemove = userAccountRepository.findById(userId)
-                .orElseThrow(() -> new AppException(ResponseEnum.USER_NOT_FOUND));
+        // Validate user exists
+        userAccountRepository.findById(userId)
+                .orElseThrow(() -> new AppException(ResponseEnum.USER_NOT_FOUND, 
+                    String.format("User with ID %d not found", userId)));
 
         if (userGroup.getMembers() != null) {
             userGroup.getMembers().removeIf(member -> member.getId().equals(userId));
@@ -528,8 +688,10 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
     }
 
     @Override
-    public void testConnection(UserAccount authenticatedUser, Integer id) {
-        DataSourceConfiguration configuration = validateAndGetDataSource(authenticatedUser, id);
+    public void testConnection(UserAccount user, Integer id) {
+        log.debug("Testing connection for data source with ID: {}", id);
+        
+        DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
         
         // Create connection request object
         Map<String, String> request = new HashMap<>();
@@ -541,13 +703,61 @@ public class DataSourceConfigurationServiceImpl implements DataSourceConfigurati
         request.put("password", configuration.getPassword());
         request.put("type", configuration.getDatabaseType().name().toLowerCase());
 
-        // Proxy request to embed service
-        embedService.proxyRequest("/api/v1/db/test-connection", request)
-                .doOnError(error -> {
-                    throw new AppException(ResponseEnum.DATASOURCE_CONNECT_FAILED);
-                })
-                .block();
+        try {
+            // Proxy request to embed service and wait for response
+            Mono<String> response = embedService.proxyRequest("/api/v1/db/test-connection", request);
+            
+            response.doOnError(error -> {
+                log.error("Connection test failed: {}", error.getMessage());
+                throw new AppException(ResponseEnum.DATASOURCE_CONNECT_FAILED, 
+                    "Failed to connect to data source: " + error.getMessage());
+            }).block();
+            
+            log.debug("Connection test successful for data source with ID: {}", id);
+        } catch (Exception ex) {
+            log.error("Connection test failed with exception: {}", ex.getMessage());
+            throw new AppException(ResponseEnum.DATASOURCE_CONNECT_FAILED, 
+                "Failed to connect to data source: " + ex.getMessage());
+        }
     }
 
-
+    @Override
+    @Transactional
+    public void updateMultipleColumns(UserAccount user, Integer id, UpdateColumnsDTO updateColumnsDTO) {
+        log.debug("Updating multiple columns in data source with ID: {}", id);
+        
+        DataSourceConfiguration configuration = validateAndGetDataSource(user, id);
+        
+        for (UpdateColumnsDTO.ColumnUpdate columnUpdate : updateColumnsDTO.getColumns()) {
+            // Find the table
+            TableDefinition table = configuration.getTableDefinitions().stream()
+                    .filter(t -> t.getId().equals(columnUpdate.getTableId()))
+                    .findFirst()
+                    .orElseThrow(() -> new AppException(ResponseEnum.TABLE_NOT_FOUND, 
+                        String.format("Table with ID %d not found", columnUpdate.getTableId())));
+            
+            // Find the column
+            TableColumn column = table.getColumns().stream()
+                    .filter(c -> c.getId().equals(columnUpdate.getColumnId()))
+                    .findFirst()
+                    .orElseThrow(() -> new AppException(ResponseEnum.COLUMN_NOT_FOUND, 
+                        String.format("Column with ID %d not found", columnUpdate.getColumnId())));
+            
+            // Update column properties
+            if (columnUpdate.getColumnIdentifier() != null) {
+                column.setColumnIdentifier(columnUpdate.getColumnIdentifier());
+            }
+            if (columnUpdate.getColumnType() != null) {
+                column.setColumnType(columnUpdate.getColumnType());
+            }
+            if (columnUpdate.getColumnDescription() != null) {
+                column.setColumnDescription(columnUpdate.getColumnDescription());
+            }
+            if (columnUpdate.getIsPrimaryKey() != null) {
+                column.setIsPrimaryKey(columnUpdate.getIsPrimaryKey());
+            }
+        }
+        
+        dataSourceConfigurationRepository.save(configuration);
+    }
 }
